seaqt/QtWidgets/gen_qtabbar.h

class QColor;
class QIcon;
class QMetaObject;
class QTabBar;
class QWidget;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QColor QColor;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QIcon QIcon;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QStyleOptionTab QStyleOptionTab;
typedef struct QTabBar QTabBar;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QTabBar_override_virtual_changeEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_changeEvent(void* self, QEvent* param1);
bool QTabBar_override_virtual_timerEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QTabBar_override_virtual_initStyleOption(void* self, intptr_t slot);
void QTabBar_virtualbase_initStyleOption(const void* self, QStyleOptionTab* option, int tabIndex);
bool QTabBar_override_virtual_devType(void* self, intptr_t slot);
int QTabBar_virtualbase_devType(const void* self);
bool QTabBar_override_virtual_setVisible(void* self, intptr_t slot);
void QTabBar_virtualbase_setVisible(void* self, bool visible);
bool QTabBar_override_virtual_heightForWidth(void* self, intptr_t slot);
int QTabBar_virtualbase_heightForWidth(const void* self, int param1);
bool QTabBar_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QTabBar_virtualbase_hasHeightForWidth(const void* self);
bool QTabBar_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QTabBar_virtualbase_paintEngine(const void* self);
bool QTabBar_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QTabBar_override_virtual_focusInEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QTabBar_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QTabBar_override_virtual_enterEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QTabBar_override_virtual_leaveEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_leaveEvent(void* self, QEvent* event);
bool QTabBar_override_virtual_moveEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QTabBar_override_virtual_closeEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QTabBar_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QTabBar_override_virtual_tabletEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QTabBar_override_virtual_actionEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QTabBar_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QTabBar_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QTabBar_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QTabBar_override_virtual_dropEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QTabBar_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QTabBar_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QTabBar_override_virtual_metric(void* self, intptr_t slot);
int QTabBar_virtualbase_metric(const void* self, int param1);
bool QTabBar_override_virtual_initPainter(void* self, intptr_t slot);
void QTabBar_virtualbase_initPainter(const void* self, QPainter* painter);
bool QTabBar_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QTabBar_virtualbase_redirected(const void* self, QPoint* offset);
bool QTabBar_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QTabBar_virtualbase_sharedPainter(const void* self);
bool QTabBar_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QTabBar_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QTabBar_virtualbase_inputMethodQuery(const void* self, int param1);
bool QTabBar_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QTabBar_virtualbase_focusNextPrevChild(void* self, bool next);
bool QTabBar_override_virtual_eventFilter(void* self, intptr_t slot);
bool QTabBar_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QTabBar_override_virtual_childEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_childEvent(void* self, QChildEvent* event);
bool QTabBar_override_virtual_customEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_customEvent(void* self, QEvent* event);
bool QTabBar_override_virtual_connectNotify(void* self, intptr_t slot);
void QTabBar_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QTabBar_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QTabBar_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QTabBar_delete(QTabBar* self);